--- a/index.html
+++ b/index.html
@@ -66,7 +66,33 @@
     </div>
 </header>
 
+<footer class="" >
+    <div class="Contentfooter">
+        <div class="smallContent">
+            <img src="GC LOGO-01.png" alt="Your Logo">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, error.</p>
+            <p>Lorem, ipsum dolor.</p>
+            <p id="yearFoot"></p>
+        </div>
 
+        <div class="smallContent">
+            <h1>Our Classes</h1>
+            <p>Lorem, ipsum dolor.</p>
+                <h5>Follow Us</h5>
+                <i class="fa-brands fa-square-instagram" style="cursor: pointer;"></i>
+                <i class="fa-brands fa-facebook" style="cursor: pointer;"></i>
+                <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
+        </div>
+
+        <div class="smallContent">
+            <h1>Working Hours</h1>
+            <p style="font-weight: bold;">lundi - Samedi</p>
+            <p>9:00am - 21:00pm</p>
+            <p style="font-weight: bold;">Dimanche</p>
+            <p>9:00am - 18:00pm</p>
+        </div>
+    </div>
+</footer>
 <!-- section2 -->
 <script src="GeniusJS.js"></script>
 </body>
