--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <!-- section1 -->
 <!-- header -->
-<div  id="ProftlioHead" class="ProtflOfHeader">
-    <div class="DivContentPrftlHEader">
+<div id="Menu">
+    <div>
          <div class="imgAndRmv">
              <img class="imgLogoPort" src="GC LOGO-01.png" alt="Your Logo">
              <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
@@ -51,19 +51,16 @@
 </div>  
 <!-- header -->
 <header >
-    <div class="div1Header">
-        <!-- Your logo image goes here -->
-        <img src="GC LOGO-01.png" alt="Your Logo">
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
-        </nav>
-        <div class="divPortDrkHeader social">
-            <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
-            <!-- <i class="fa-solid fa-moon" id="solid" style="color: #ffffff;"></i> -->
-        </div>
+    <img src="GC LOGO-01.png" alt="Your Logo">
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
+    <div class="divPortDrkHeader social">
+        <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
+        <!-- <i class="fa-solid fa-moon" id="solid" style="color: #ffffff;"></i> -->
     </div>
 </header>
 
