--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
     </div>
 </header>
 
-<footer class="" >
+<footer>
     <div class="Contentfooter">
         <div class="smallContent">
             <img src="GC LOGO-01.png" alt="Your Logo">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, error.</p>
-            <p>Lorem, ipsum dolor.</p>
+            <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
             <p id="yearFoot"></p>
         </div>
 
-        <div class="smallContent">
-            <h1>Our Classes</h1>
-            <p>Lorem, ipsum dolor.</p>
-                <h5>Follow Us</h5>
+        <div class="smallContent2">
+            <h1>Media</h1>
+            <h5>Suivez-nous</h5>
+            <div  class="Media">
                 <i class="fa-brands fa-square-instagram" style="cursor: pointer;"></i>
                 <i class="fa-brands fa-facebook" style="cursor: pointer;"></i>
                 <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
+            </div>
         </div>
 
         <div class="smallContent">
