--- a/index.html
+++ b/index.html
@@ -10,45 +10,42 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="cssFileGenius.css">
 </head>
-<body>
-
-<!-- section1 -->
-<!-- header -->
-<div id="Menu">
-    <div>
-         <div class="imgAndRmv">
-             <img class="imgLogoPort" src="GC LOGO-01.png" alt="Your Logo">
-             <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
-         </div>
-         <div class="AbotAnddivL">
-             <h3>About Us</h3>
-             <p style="font-size: 1rem;">Lorem,Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, esse. ipsum dolor sit amet consectetur adipisicing elit. Error, quis.</p>
-         </div>
-         <div class="AbotAnddivLImags">
-             <h3>Gelary</h3>
-             <div class="imgGrid">
-                <img src="image Grid Hed.jpg" alt="">
-                <img src="image Grid Hed.jpg" alt="">
-                <img src="image Grid Hed.jpg" alt="">
-                <img src="image Grid Hed.jpg" alt="">
-                <img src="image Grid Hed.jpg" alt="">
-                <img src="image Grid Hed.jpg" alt="">
+<body> 
+    <div id="Menu">
+        <div class="Menu-all">
+             <div class="imgAndRmv">
+                 <img class="imgLogoPort" src="GC LOGO-01.png" alt="Your Logo">
+                 <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
              </div>
-         </div>
-         <div class="AbotAnddivLInfos">
-            <h3>Information</h3>
-            <p style="font-size: 1rem;"><i class="fa-solid fa-location-dot"></i>Drissia, Tanger Tariq</p>
-            <p style="font-size: 1rem;"><i class="fa-solid fa-phone"></i>0808 00 00 00</p>
-            <p style="font-size: 1rem;"><i class="fa-solid fa-envelope"></i>geniuscenter@gmail.com</p>
+             <div class="AbotAnddivL">
+                 <h3>About Us</h3>
+                 <p style="font-size: 1rem;">Lorem,Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, esse. ipsum dolor sit amet consectetur adipisicing elit. Error, quis.</p>
+             </div>
+             <div class="AbotAnddivLImags">
+                 <h3>Gelary</h3>
+                 <div class="imgGrid">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                 </div>
+             </div>
+             <div class="AbotAnddivLInfos">
+                <h3>Information</h3>
+                <p style="font-size: 1rem;"><i class="fa-solid fa-location-dot"></i>Drissia, Tanger Tariq</p>
+                <p style="font-size: 1rem;"><i class="fa-solid fa-phone"></i>0808 00 00 00</p>
+                <p style="font-size: 1rem;"><i class="fa-solid fa-envelope"></i>geniuscenter@gmail.com</p>
+            </div>
+            <div class="AbotAnddivLInfos social">
+                <h3>Follow Us</h3>
+                <i class="fa-brands fa-square-instagram" style="cursor: pointer;"></i>
+                <i class="fa-brands fa-facebook" style="cursor: pointer;"></i>
+                <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
+            </div>
         </div>
-        <div class="AbotAnddivLInfos social">
-            <h3>Follow Us</h3>
-            <i class="fa-brands fa-square-instagram" style="cursor: pointer;"></i>
-            <i class="fa-brands fa-facebook" style="cursor: pointer;"></i>
-            <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
-        </div>
-    </div>
-</div>  
+    </div> 
 <!-- header -->
 <header >
     <img src="GC LOGO-01.png" alt="Your Logo">
@@ -63,6 +60,9 @@
         <!-- <i class="fa-solid fa-moon" id="solid" style="color: #ffffff;"></i> -->
     </div>
 </header>
+<section id="section1">
+
+</section>
 
 <footer>
     <div class="Contentfooter">
@@ -91,6 +91,7 @@
         </div>
     </div>
 </footer>
+
 <!-- section2 -->
 <script src="GeniusJS.js"></script>
 </body>
