--- a/index.html
+++ b/index.html
@@ -71,6 +71,42 @@
     </div>
 </section>
 
+<!-- section3 Articels-->
+<section class="sectionArticles">
+    <h2>Latest Blog</h2>
+    <div class="articles">
+        <div class="article">
+            <img src="download.jpg" alt="image 1">
+            <div class="articledatediscription">
+                <div class="dateAndtitlearticl">
+                    <h3>Article 1</h3>
+                    <p class="date">08.12.2023</p>
+                </div>
+                <p class="description">Lorem, ipsum dolor sisit amet consectetur adipisicing elit. Sapiente culpa libero aliquid atque similique temporibus itaque quaerat deserunt, nihil saepe animi sint tempora obcaecati delectus? Excepturi aut incidunt fuga ex consectetur natus accusamus rem ipsam adipisci inventore sit, enim id quis rerum officiis quos. Sequi accusamus non iusto totam dolor delectus! Esse, hic. Laudantium unde nihil, quibusdam officiis veniam amet dicta obcaecati modi facilis, dignissimos, vel eum harum! Cupiditate, ut officiis laboriosam facilis et eveniet quas hic! Neque corrupti nostrum, quisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+            </div>
+        </div>
+        <div class="article">
+            <img src="download.jpg" alt="image 1">
+            <div class="articledatediscription">
+                <div class="dateAndtitlearticl">
+                    <h3>Article 1</h3>
+                    <p class="date">08.12.2023</p>
+                </div>
+                <p class="description">Lorem, e quaerat deserunt, nihil saepe animi sint tempora obcaecati delectus? Excepturi aut incidunt fuga ex consectetur natus accusamus rem ipsam adipisci inventore sit, enim id quis rerum officiis quos. Sequi accusamus non iusto totam dolor delectus! Esse, hic. Laudantium unde nihil, quibusdam officiis veniam amet dicta obcaecati modi facilis, dignissimos, vel eum harum! Cupiditate, ut officiis laboriosam facilis et eveniet quas hic! Neque corrupti nostrum, quisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+            </div>
+        </div>
+        <div class="article">
+            <img src="download.jpg" alt="image 1">
+            <div class="articledatediscription">
+                <div class="dateAndtitlearticl">
+                    <h3>Article 1</h3>
+                    <p class="date">08.12.2023</p>
+                </div>
+                <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, earum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente culpa libero aliquid atque similique temporibus itaque quaerat deserunt, nihil saepe animi sint tempora obcaecati delectus? Excepturi aut incidunt fuga ex consectetur natus accusamus rem ipsam adipisci inventore sit, enim id quis rerum officiis quos. Sequi accusamus non iusto totam dolor delectus! Esse, hic. Laudantium unde nihil, quibusdam officiis veniam amet dicta obcaecati modi facilis, dignissimos, vel eum harum! Cupiditate, ut officiis laboriosam facilis et eveniet quas hic! Neque corrupti nostrum, quisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 <footer>
     <div class="Contentfooter">
@@ -100,7 +136,8 @@
     </div>
 </footer>
 
-<!-- section2 -->
+
+
 <script src="GeniusJS.js"></script>
 </body>
 </html>
