--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="cssFileGenius.css">
 </head>
 <body> 
+
+
+<!-- portfolio -->
     <div id="Menu">
         <div class="Menu-all">
              <div class="imgAndRmv">
@@ -71,6 +74,13 @@
     </div>
 </section>
 
+
+<!-- section cercle -->
+<div class="serceles">
+    <div class="cercle1"></div>
+    <div class="cercle2"></div>
+</div>
+
 <!-- section3 Articels-->
 <section class="sectionArticles">
     <h2>Latest Blog</h2>
@@ -80,9 +90,9 @@
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Article 1</h3>
-                    <p class="date">08.12.2023</p>
+                    <p class="date">08.12.2022</p>
                 </div>
-                <p class="description">Lorem, ipsum dolor sisit amet consectetur adipisicing elit. Sapiente culpa libero aliquid atque similique temporibus itaque quaerat deserunt, nihil saepe animi sint tempora obcaecati delectus? Excepturi aut incidunt fuga ex consectetur natus accusamus rem ipsam adipisci inventore sit, enim id quis rerum officiis quos. Sequi accusamus non iusto totam dolor delectus! Esse, hic. Laudantium unde nihil, quibusdam officiis veniam amet dicta obcaecati modi facilis, dignissimos, vel eum harum! Cupiditate, ut officiis laboriosam facilis et eveniet quas hic! Neque corrupti nostrum, quisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+                <p class="description">Lorem, ipsum dolibus sit, enim id quis reruquisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
             </div>
         </div>
         <div class="article">
@@ -92,7 +102,7 @@
                     <h3>Article 1</h3>
                     <p class="date">08.12.2023</p>
                 </div>
-                <p class="description">Lorem, e quaerat deserunt, nihil saepe animi sint tempora obcaecati delectus? Excepturi aut incidunt fuga ex consectetur natus accusamus rem ipsam adipisci inventore sit, enim id quis rerum officiis quos. Sequi accusamus non iusto totam dolor delectus! Esse, hic. Laudantium unde nihil, quibusdam officiis veniam amet dicta obcaecati modi facilis, dignissimos, vel eum harum! Cupiditate, ut officiis laboriosam facilis et eveniet quas hic! Neque corrupti nostrum, quisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+                <p class="description">Loremus rem quibusdam officiis veniam amet dcorrupti nostrum, quisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
             </div>
         </div>
         <div class="article">
@@ -102,7 +112,7 @@
                     <h3>Article 1</h3>
                     <p class="date">08.12.2023</p>
                 </div>
-                <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum, earum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente culpa libero aliquid atque similique temporibus itaque quaerat deserunt, nihil saepe animi sint tempora obcaecati delectus? Excepturi aut incidunt fuga ex consectetur natus accusamus rem ipsam adipisci inventore sit, enim id quis rerum officiis quos. Sequi accusamus non iusto totam dolor delectus! Esse, hic. Laudantium unde nihil, quibusdam officiis veniam amet dicta obcaecati modi facilis, dignissimos, vel eum harum! Cupiditate, ut officiis laboriosam facilis et eveniet quas hic! Neque corrupti nostrum, quisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+                <p class="description">Lorem,Sa Exceptus? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
             </div>
         </div>
     </div>
