--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
     <h2>Latest Blog</h2>
     <div class="articles">
         <div class="article">
-            <img src="download.jpg" alt="image 1">
+            <img src="femmecasiste.webp" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
-                    <h3>Article 1</h3>
+                    <h3>Progressez avec nos formations en ligne</h3>
                     <p class="date">08.12.2022</p>
                 </div>
-                <p class="description">Lorem, ipsum dolibus sit, enim id quis reruquisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+                <p class="description">Bénéficiez de l’accompagnement d’un Coach Gojob, et de formations en ligne gratuites et certifiantes.</p>
             </div>
         </div>
         <div class="article">
@@ -102,7 +102,7 @@
                     <h3>Article 1</h3>
                     <p class="date">08.12.2023</p>
                 </div>
-                <p class="description">Loremus rem quibusdam officiis veniam amet dcorrupti nostrum, quisquam dolorem sequi molestias? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+                <p class="description">Loremus rem, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
             </div>
         </div>
         <div class="article">
@@ -118,6 +118,7 @@
     </div>
 </section>
 
+<!-- footer -->
 <footer>
     <div class="Contentfooter">
         <div class="smallContent">
