--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <h3>Article 1</h3>
                     <p class="date">08.12.2023</p>
                 </div>
-                <p class="description">Loremus rem, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+                <p class="description">Loremus rem, quis asperiores eos aewqa earum suscipit magnam deleniti voluptatem.</p>
             </div>
         </div>
         <div class="article">
@@ -112,7 +112,7 @@
                     <h3>Article 1</h3>
                     <p class="date">08.12.2023</p>
                 </div>
-                <p class="description">Lorem,Sa Exceptus? Eveniet ratione, quis asperiores eos amet, veniam, nihil cum similique expedita earum suscipit magnam deleniti voluptatem.</p>
+                <p class="description">Lorem,Sa Exceptus? Eveniet ratione, tatem.</p>
             </div>
         </div>
     </div>
