--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div> 
 <!-- header -->
 <header >
-    <img src="GC LOGO-01.png" alt="Your Logo">
+    <img src="logon.png" alt="Your Logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -83,26 +83,26 @@
 
 <!-- section3 Articels-->
 <section class="sectionArticles">
-    <h2>Latest Blog</h2>
+    <h2>Articles</h2>
     <div class="articles">
         <div class="article">
             <img src="femmecasiste.webp" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Progressez avec nos formations en ligne</h3>
-                    <p class="date">08.12.2022</p>
+                    <p class="date">11.06.2022</p>
                 </div>
-                <p class="description">Bénéficiez de l’accompagnement d’un Coach Gojob, et de formations en ligne gratuites et certifiantes.</p>
+                <p class="description">Bénéficiez de l’accompagnement d’un Coach ,et de formations certifiantes.</p>
             </div>
         </div>
         <div class="article">
-            <img src="download.jpg" alt="image 1">
+            <img src="caces engin chantier.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
-                    <h3>Article 1</h3>
-                    <p class="date">08.12.2023</p>
+                    <h3>LA CONDUITE D'UN ENGIN DE CHANTIER</h3>
+                    <p class="date">05.07.2023</p>
                 </div>
-                <p class="description">Loremus rem, quis asperiores eos aewqa earum suscipit magnam deleniti voluptatem.</p>
+                <p class="description">La conduite d’Engin de Chantier s’effectue principalement dans le cadre d'un chantier de terrassement ou de nivellement.</p>
             </div>
         </div>
         <div class="article">
@@ -122,7 +122,7 @@
 <footer>
     <div class="Contentfooter">
         <div class="smallContent">
-            <img src="GC LOGO-01.png" alt="Your Logo">
+            <img src="logon.png"Your Logo">
             <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
             <p id="yearFoot"></p>
         </div>
