--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 
 <!-- portfolio -->
-    <div id="Menu">
+<div class="AllMenusOpen">
+            <div id="Menu">
         <div class="Menu-all">
              <div class="imgAndRmv">
                  <img class="imgLogoPort" src="GC LOGO-01.png" alt="Your Logo">
@@ -48,7 +49,26 @@
                 <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
             </div>
         </div>
+    </div>
+    <div id="Menu2">
+        <div class="Menu-all2">
+            <div class="imgAndRmv">
+                 <img class="imgLogoPort" src="GC LOGO-01.png" alt="Your Logo">
+                 <i class="fa-solid fa-xmark" id="ClosePortfl2"></i>
+            </div>
+            <div class="Navig">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                        <a href="#">About</a>
+                        <a href="#">Services</a>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+             </div>
+        </div>
     </div> 
+</div> 
 <!-- header -->
 <header >
     <img src="logon.png" alt="Your Logo">
@@ -59,8 +79,10 @@
         <a href="#">Contact</a>
     </nav>
     <div class="divPortDrkHeader social">
+        <div class="Bars">
+            <i id="OpenMark" class="fa-solid fa-bars resbar"></i>
+        </div>
         <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
-        <!-- <i class="fa-solid fa-moon" id="solid" style="color: #ffffff;"></i> -->
     </div>
 </header>
 
