--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="Menu">
         <div class="Menu-all">
              <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="GC LOGO-01.png" alt="Your Logo">
+                 <img class="imgLogoPort" src="/img/GC LOGO-01.png" alt="Your Logo">
                  <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
              </div>
              <div class="AbotAnddivL">
@@ -28,12 +28,12 @@
              <div class="AbotAnddivLImags">
                  <h3>Gelary</h3>
                  <div class="imgGrid">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
-                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="/img/image Grid Hed.jpg" alt="">
+                    <img src="/img/image Grid Hed.jpg" alt="">
+                    <img src="/img/image Grid Hed.jpg" alt="">
+                    <img src="/img/image Grid Hed.jpg" alt="">
+                    <img src="/img/image Grid Hed.jpg" alt="">
+                    <img src="/img/image Grid Hed.jpg" alt="">
                  </div>
              </div>
              <div class="AbotAnddivLInfos">
@@ -53,7 +53,7 @@
     <div id="Menu2">
         <div class="Menu-all2">
             <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="GC LOGO-01.png" alt="Your Logo">
+                 <img class="imgLogoPort" src="/img/GC LOGO-01.png" alt="Your Logo">
                  <i class="fa-solid fa-xmark" id="ClosePortfl2"></i>
             </div>
             <div class="Navig">
@@ -71,7 +71,7 @@
 </div> 
 <!-- header -->
 <header >
-    <img src="logon.png" alt="Your Logo">
+    <img src="/img/logon.png" alt="Your Logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -108,7 +108,7 @@
     <h2>Articles</h2>
     <div class="articles">
         <div class="article">
-            <img src="femmecasiste.webp" alt="image 1">
+            <img src="/img/femmecasiste.webp" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Progressez avec nos formations en ligne</h3>
@@ -118,7 +118,7 @@
             </div>
         </div>
         <div class="article">
-            <img src="caces engin chantier.jpg" alt="image 1">
+            <img src="/img/caces engin chantier.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>LA CONDUITE D'UN ENGIN DE CHANTIER</h3>
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div class="article">
-            <img src="download.jpg" alt="image 1">
+            <img src="/img/download.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Article 1</h3>
@@ -154,7 +154,7 @@
 <footer>
     <div class="Contentfooter">
         <div class="smallContent">
-            <img src="logon.png"Your Logo">
+            <img src="/img/logon.png">
             <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
             <p id="yearFoot"></p>
         </div>
