--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <!-- portfolio -->
 <div class="AllMenusOpen">
-            <div id="Menu">
+    <div id="Menu">
         <div class="Menu-all">
              <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="/img/GC LOGO-01.png" alt="Your Logo">
+                 <img class="imgLogoPort" src="/img/GC LOGO-01.png" alt="Your Logo" loading="lazy">
                  <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
              </div>
              <div class="AbotAnddivL">
@@ -30,12 +30,12 @@
              <div class="AbotAnddivLImags">
                  <h3>Gelary</h3>
                  <div class="imgGrid">
-                    <img src="/img/image Grid Hed.jpg" alt="">
-                    <img src="/img/image Grid Hed.jpg" alt="">
-                    <img src="/img/image Grid Hed.jpg" alt="">
-                    <img src="/img/image Grid Hed.jpg" alt="">
-                    <img src="/img/image Grid Hed.jpg" alt="">
-                    <img src="/img/image Grid Hed.jpg" alt="">
+                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
                  </div>
              </div>
              <div class="AbotAnddivLInfos">
