--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="Menu">
         <div class="Menu-all">
              <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="/img/GC LOGO-01.png" alt="Your Logo" loading="lazy">
+                 <img class="imgLogoPort" src="img/GC LOGO-01.png" alt="Your Logo" loading="lazy">
                  <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
              </div>
              <div class="AbotAnddivL">
@@ -30,12 +30,12 @@
              <div class="AbotAnddivLImags">
                  <h3>Gelary</h3>
                  <div class="imgGrid">
-                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="/img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
                  </div>
              </div>
              <div class="AbotAnddivLInfos">
@@ -55,7 +55,7 @@
     <div id="Menu2">
         <div class="Menu-all2">
             <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="/img/GC LOGO-01.png" alt="Your Logo">
+                 <img class="imgLogoPort" src="img/GC LOGO-01.png" alt="Your Logo">
                  <i class="fa-solid fa-xmark" id="ClosePortfl2"></i>
             </div>
             <div class="Navig">
@@ -73,7 +73,7 @@
 </div> 
 <!-- header -->
 <header >
-    <img src="/img/logon.png" alt="Your Logo">
+    <img src="img/logon.png" alt="Your Logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -110,7 +110,7 @@
     <h2>Articles</h2>
     <div class="articles">
         <div class="article">
-            <img src="/img/femmecasiste.webp" alt="image 1">
+            <img src="img/femmecasiste.webp" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Progressez avec nos formations en ligne</h3>
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="article">
-            <img src="/img/caces engin chantier.jpg" alt="image 1">
+            <img src="img/caces engin chantier.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>LA CONDUITE D'UN ENGIN DE CHANTIER</h3>
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="article">
-            <img src="/img/download.jpg" alt="image 1">
+            <img src="img/download.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Article 1</h3>
@@ -156,7 +156,7 @@
 <footer>
     <div class="Contentfooter">
         <div class="smallContent">
-            <img src="/img/logon.png">
+            <img src="img/logon.png">
             <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
             <p id="yearFoot"></p>
         </div>
