updat home page

--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="img/logon.png">
     <link rel="stylesheet" href="cssFileGenius.css">
-    
 </head>
 <body> 
 
 
 <!-- portfolio -->
-<div class="AllMenusOpen">
     <div id="Menu">
         <div class="Menu-all">
              <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="img/GC LOGO-01.png" alt="Your Logo" loading="lazy">
+                 <img class="imgLogoPort" src="logon.png" alt="Your Logo">
                  <i class="fa-solid fa-xmark" id="ClosePortfl" onclick="ClosePortfli()"></i>
              </div>
              <div class="AbotAnddivL">
@@ -30,12 +27,12 @@
              <div class="AbotAnddivLImags">
                  <h3>Gelary</h3>
                  <div class="imgGrid">
-                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
-                    <img src="img/image Grid Hed.jpg" alt="" loading="lazy">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
+                    <img src="image Grid Hed.jpg" alt="">
                  </div>
              </div>
              <div class="AbotAnddivLInfos">
@@ -51,29 +48,10 @@
                 <i class="fa-brands fa-tiktok" style="cursor: pointer;"></i>
             </div>
         </div>
-    </div>
-    <div id="Menu2">
-        <div class="Menu-all2">
-            <div class="imgAndRmv">
-                 <img class="imgLogoPort" src="img/GC LOGO-01.png" alt="Your Logo">
-                 <i class="fa-solid fa-xmark" id="ClosePortfl2"></i>
-            </div>
-            <div class="Navig">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
-                        <a href="#">About</a>
-                        <a href="#">Services</a>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-             </div>
-        </div>
     </div> 
-</div> 
 <!-- header -->
 <header >
-    <img src="img/logon.png" alt="Your Logo">
+    <img src="logon.png" alt="Your Logo">
     <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -81,12 +59,26 @@
         <a href="#">Contact</a>
     </nav>
     <div class="divPortDrkHeader social">
-        <div class="Bars">
-            <i id="OpenMark" class="fa-solid fa-bars resbar"></i>
-        </div>
         <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
+        <i class="fa-solid fa-moon" style="color: #ffffff;"></i>
+        <!-- <i class="fa-solid fa-moon" id="solid" style="color: #ffffff;"></i> -->
     </div>
 </header>
+
+<!-- section Home 1 -->
+<section class="HomeFirstSection" style="height: 81vh; background-color: #192664;">
+    <div class="serceles">
+        <div class="cercle1">
+            <div class="cercle2"></div>
+        </div>
+    </div>
+    <div class="writFirstDiv">
+        <h2>Genius Center Prive</h2>
+        <p>Lorem, ipsum.</p>
+        <p>Lorem, ipsum.</p>
+        <button style=" background-color: #d5d5d5;width: 100%;">OUR CLASSES</button>
+    </div>
+</section>
 
 <section class="metierArticle">
     <div class="svgsec">
@@ -99,18 +91,14 @@
 </section>
 
 
-<!-- section cercle -->
-<div class="serceles">
-    <div class="cercle1"></div>
-    <div class="cercle2"></div>
-</div>
+
 
 <!-- section3 Articels-->
 <section class="sectionArticles">
     <h2>Articles</h2>
     <div class="articles">
         <div class="article">
-            <img src="img/femmecasiste.webp" alt="image 1">
+            <img src="femmecasiste.webp" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Progressez avec nos formations en ligne</h3>
@@ -120,7 +108,7 @@
             </div>
         </div>
         <div class="article">
-            <img src="img/caces engin chantier.jpg" alt="image 1">
+            <img src="caces engin chantier.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>LA CONDUITE D'UN ENGIN DE CHANTIER</h3>
@@ -130,7 +118,7 @@
             </div>
         </div>
         <div class="article">
-            <img src="img/download.jpg" alt="image 1">
+            <img src="download.jpg" alt="image 1">
             <div class="articledatediscription">
                 <div class="dateAndtitlearticl">
                     <h3>Article 1</h3>
@@ -144,19 +132,40 @@
 
 <section class="MapsSection">
     <div>
-        <h2 style="color: #192664;">Our Location :</h2>
+        <h2 style="color: #192664;"><i class="fa-solid fa-location-dot"></i>Nous sommes situés dans</h2>
     </div>
     <div class="maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3237.648580095802!2d-5.804705124208786!3d35.75944137256216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQ1JzM0LjAiTiA1wrA0OCcwNy43Ilc!5e0!3m2!1sfr!2sma!4v1705022946045!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3237.648580095802!2d-5.804705124208786!3d35.75944137256216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQ1JzM0LjAiTiA1wrA0OCcwNy43Ilc!5e0!3m2!1sfr!2sma!4v1705022946045!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div>
+            <h5>Tangier Drissia Av tariq beno zaid
+                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3237.648580095802!2d-5.804705124208786!3d35.75944137256216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQ1JzM0LjAiTiA1wrA0OCcwNy43Ilc!5e0!3m2!1sfr!2sma!4v1705022946045!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </h5>
+        </div>
+
+        <div>  
+            <h5>Boghlien Av
+                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3237.648580095802!2d-5.804705124208786!3d35.75944137256216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzXCsDQ1JzM0LjAiTiA1wrA0OCcwNy43Ilc!5e0!3m2!1sfr!2sma!4v1705022946045!5m2!1sfr!2sma" width="600" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </h5>
+        </div>
+    </div>
+    <div>
+        <p><i class="fa-solid fa-location-dot"></i>Tangier - CasaBlanca - Fes - Agadir - Marakech -Tetouan - Azilal </p>
     </div>
 </section>
 
+
+<!-- have a question div -->
+<section class="havequesitonsection">
+    <div>
+        <h2>u have a question ?</h2>
+        <h3> <span>Call:</span> 08 08 8998 09</h3>
+        <button>PURCHASE NOW</button>
+    </div>
+</section>
 <!-- footer -->
 <footer>
     <div class="Contentfooter">
         <div class="smallContent">
-            <img src="img/logon.png">
+            <img src="logon.png"Your Logo">
             <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
             <p id="yearFoot"></p>
         </div>
