--- a/index.html
+++ b/index.html
@@ -61,22 +61,23 @@
     <div class="divPortDrkHeader social">
         <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
         <i class="fa-solid fa-moon" style="color: #ffffff;"></i>
-        <!-- <i class="fa-solid fa-moon" id="solid" style="color: #ffffff;"></i> -->
     </div>
 </header>
 
 <!-- section Home 1 -->
-<section class="HomeFirstSection" style="height: 81vh; background-color: #192664;">
+<section class="HomeFirstSection" style="background-color: #192664;">
     <div class="serceles">
         <div class="cercle1">
             <div class="cercle2"></div>
         </div>
     </div>
     <div class="writFirstDiv">
-        <h2>Genius Center Prive</h2>
-        <p>Lorem, ipsum.</p>
-        <p>Lorem, ipsum.</p>
-        <button style=" background-color: #d5d5d5;width: 100%;">OUR CLASSES</button>
+        <div class="GCP">
+            <h2>Genius Center Prive</h2>
+            <p>Lorem, ipsum.</p>
+            <p>Lorem, ipsum.</p>
+            <button style=" background-color: #d5d5d5;width: 100%;">OUR CLASSES</button>
+        </div>
     </div>
 </section>
 
@@ -165,7 +166,7 @@
 <footer>
     <div class="Contentfooter">
         <div class="smallContent">
-            <img src="logon.png"Your Logo">
+            <img src="logon.png">
             <p>"Les CACES sont les ailes qui élèvent la logistique, nous permettant de voler au-dessus des obstacles pour atteindre nos objectifs avec agilité."</p>
             <p id="yearFoot"></p>
         </div>
