--- a/index.html
+++ b/index.html
@@ -49,6 +49,22 @@
             </div>
         </div>
     </div> 
+    <div id="Menu2">
+        <div class="Menu-all">
+             <div class="imgAndRmv">
+                 <img class="imgLogoPort" src="logon.png" alt="Your Logo">
+                 <i class="fa-solid fa-xmark" id="ClosePortfl2"></i>
+             </div>
+             <ul>
+                <li>
+                    <a href="#">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Services</a>
+                    <a href="#">Contact</a>
+                </li>
+             </ul>
+        </div>
+    </div> 
 <!-- header -->
 <header >
     <img src="logon.png" alt="Your Logo">
@@ -58,9 +74,14 @@
         <a href="#">Services</a>
         <a href="#">Contact</a>
     </nav>
+    
     <div class="divPortDrkHeader social">
+        <div class="Bars">
+            <i id="OpenMark" class="fa-solid fa-bars resbar"></i>
+        </div>
         <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
         <i class="fa-solid fa-moon" style="color: #ffffff;"></i>
+    
     </div>
 </header>
 
