--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
         </div>
         <i onclick="afficherPorf()" class="fa-regular fa-chart-bar"></i>
         <i class="fa-solid fa-moon" style="color: #ffffff;"></i>
-    
     </div>
 </header>
 
@@ -94,11 +93,19 @@
     </div>
     <div class="writFirstDiv">
         <div class="GCP">
+            <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
             <h2>Genius Center Prive</h2>
             <p>Lorem, ipsum.</p>
             <p>Lorem, ipsum.</p>
             <button style=" background-color: #d5d5d5;width: 100%;">OUR CLASSES</button>
         </div>
+    </div>
+    <div class="Socialss2">
+        <h3>Share</h3>
+        <div class="line"></div>
+        <i class="fa-brands fa-linkedin-in"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-instagram"></i>
     </div>
 </section>
 
