--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
         <div class="GCP">
             <img src="titlebg.13d788348b56c629eefb2e7ad1f4d6ce.svg" alt="">
             <h2>Genius Center Prive</h2>
-            <p>Lorem, ipsum.</p>
-            <p>Lorem, ipsum.</p>
-            <button style=" background-color: #d5d5d5;width: 100%;">OUR CLASSES</button>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, aspernatur.</p>
+            <button style=" background-color: #d5d5d5">OUR CLASSES</button>
         </div>
     </div>
     <div class="Socialss2">
