--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <button style=" background-color: #d5d5d5">OUR CLASSES</button>
         </div>
     </div>
+<!-- share bar social on first section -->
     <div class="Socialss2">
         <h3>Share</h3>
         <div class="line"></div>
@@ -108,18 +109,34 @@
     </div>
 </section>
 
+<!-- Un métier, un article -->
 <section class="metierArticle">
     <div class="svgsec">
        <h2> 
           <svg>
         <path d="M3.16 27.294l.177.007 11.628.809c1.717.119 3.01 1.632 2.89 3.378-.122 1.747-1.613 3.066-3.33 2.946l-11.628-.808c-1.717-.12-3.01-1.632-2.89-3.379.122-1.746 1.613-3.065 3.33-2.946zm-2-21.9a3.08 3.08 0 014.39-.409l14.856 12.581a3.208 3.208 0 01.401 4.465 3.08 3.08 0 01-4.39.408L1.562 9.858a3.208 3.208 0 01-.4-4.465zM23.997.173c1.626-.563 3.41.322 3.982 1.976l3.636 10.502c.573 1.654-.28 3.452-1.907 4.015-1.627.563-3.41-.321-3.983-1.975L22.09 4.19c-.573-1.655.281-3.452 1.908-4.016z" fill="currentColor"></path>
     </svg>Un métier, un article</h2>
-
     </div>
 </section>
 
-
-
+<!-- 3 divs de qualité -->
+<section class="divProSuivi">
+    <div>
+        <i class="fa-solid fa-user-tie"></i>
+        <h3>LOREMPZ</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eius!</p>
+    </div>
+    <div>
+        <i class="fa-solid fa-user-tie"></i>
+        <h3>LOREMPZ</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eius!</p>
+    </div>
+    <div>
+        <i class="fa-solid fa-user-tie"></i>
+        <h3>LOREMPZ</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, eius!</p>
+    </div>
+</section>
 
 <!-- section3 Articels-->
 <section class="sectionArticles">
